<resources>
    <string name="app_name">Simplibuy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letsgo">Let\'s Go!</string>
    <string name="new_we_d_be_happy_to_have_you_onboard">New? We\'d be happy to have you \nonboard!</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="hello_there">Hello There!</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_username">Welcome</string>
    <string name="add_item">Add Item</string>
    <string name="bill_total">Bill Total:</string>
    <string name="cart_weight">Cart Weight:</string>
    <string name="product_name">Product Name</string>
    <string name="product_details">Product Details:</string>
    <string name="product_price">Product Price</string>
    <string name="product_weight">Product Weight</string>
    <string name="product_code">Product Code</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="eye_on">Eye On</string>
    <string name="select_your_dob">Select your DOB:</string>
    <string name="already_registered_log_in">Already Registered? Log In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="create_an_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="scan_the_barcode_at_the_back_of_the_product">Scan the barcode at the back of the product.</string>
    <string name="desc">iv_Selector</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tell_us_your_birthday">Tell us your Birthday!</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="email">Email</string>
    <string name="shopping_list_fragment">Shopping List Fragment</string>
    <string name="add_a_new_shopping_item">Add a new Shopping Item</string>
    <string name="name">Name</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="title_activity_shopping">ShoppingActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_shopping_list">Your Shopping List</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="total">total</string>
    <string name="checkout">checkout</string>
    <string name="image">Image</string>
    <string name="logout">LOGOUT</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="eyeon">EyeOn</string>
    <string name="description">Thank you for shopping with us </string>
    <string name="sign_up1">Sign Up</string>
    <string name="ultra_smooth_shopping_experience">Ultra Smooth Shopping Experience!</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="new_here">New Here?</string>
    <string name="new_here_create_account">New Here? Create Account!</string>
    <string name="full_name">Full Name</string>
    <string name="simplibuy">Simplibuy</string>
    <string name="thank_you_for_shopping_with_us">Thank you for shopping with us!</string>
    <string name="click_to_pay">Click to Pay</string>
    <string name="by_joining_you_agree_to_our_terms_of_service">By Joining, you agree to our <u>Terms of Service</u></string>
    <string name="currently_logged_in_as">Currently logged in as:</string>
    <string name="hello">Hello</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="tap_to_scan">Tap to Scan</string>
    <string name="make_payment">Make Payment</string>
    <string name="e_mail">Email</string>
    <string name="fragment_title_main">Main Area</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="please_click_back_again_to_exit">Please Click Again to Exit</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>


    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_wait">Please Wait&#8230;</string>


    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <!--TODO (Step 6: All the string values are added here.)-->
    <!--START-->
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="shopping_list">Shopping List</string>
    <string name="total_items">Total Items</string>
    <string name="dollar_sign">$$$$</string>
    <string name="total_bill">Total Bill</string>
    <string name="dashes">--------</string>
    <string name="enter_email">Enter Email</string>
    <string name="additional_quantity_threshold_asterik">additional_quantity_threshold_asterik</string>
    <string name="base_flat_shipping_fee_asterik">base_flat_shipping_fee_asterik</string>
    <string name="save">save</string>
    <string name="address">Address</string>
    <string name="business_name">Business Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="shipping_fee_outside_zone_astrik">shipping_fee_outside_zone_astrik</string>

    //
    <string-array name="choose_one">
        <item>Customer</item>
        <item>Client</item>
    </string-array>

</resources>