<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    android:padding="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/greatvibes"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_in" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/enter_your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/username"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:counterOverflowTextColor="@color/design_default_color_error"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperTextTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forgotPasswordBButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:elevation="0dp"
                android:gravity="start"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/letsgoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/colorAccent"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/letsgo"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_send"
                app:iconGravity="textStart"
                app:iconSize="16dp" />

            <Button
                android:id="@+id/createAccountButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="@android:color/transparent"
                android:elevation="0dp"
                android:gravity="center"
                android:text="@string/new_here_create_account"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>