<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:adjustViewBounds="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/amount"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivMinus2"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivDelete2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:focusable="true"
        android:src="@drawable/ic_delete"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName2" />

    <ImageView
        android:id="@+id/ivPlus2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:focusable="true"
        android:src="@drawable/ic_plus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <ImageView
        android:id="@+id/ivMinus2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:focusable="true"
        android:src="@drawable/ic_minus"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ivPlus2"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>